--- a/branches/admin2/nbproject/project.properties
+++ b/branches/admin2/nbproject/project.properties
@@ -37,4 +37,5 @@ project.admin2-war=admin2-war
 reference.admin2-ejb.dist-ear=${project.admin2-ejb}/dist/admin2-ejb.jar
 reference.admin2-war.dist-ear=${project.admin2-war}/dist/admin2-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
