--- a/branches/admin2/admin2-ejb/nbproject/project.properties
+++ b/branches/admin2/admin2-ejb/nbproject/project.properties
@@ -35,6 +35,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=admin2-ejb.jar
+jars.in.ejbjar=true
 javac.classpath=
 javac.debug=true
 javac.deprecation=false
