working with tabless

--- a/branches/admin2/admin2-war/web/WEB-INF/web.xml
+++ b/branches/admin2/admin2-war/web/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/allAccount.xhtml</welcome-file>
+        <welcome-file>faces/createAccount.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
