--- a/branches/smurf/MotivationForm/MotivationForm-war/web/WEB-INF/web.xml
+++ b/branches/smurf/MotivationForm/MotivationForm-war/web/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/Motivational.xhtml</welcome-file>
+        <welcome-file>faces/MotivationalEdit.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
