Initial Create, View & Update - Functional

--- a/branches/marco/Conf_att_request/Conf_att_request-war/web/WEB-INF/web.xml
+++ b/branches/marco/Conf_att_request/Conf_att_request-war/web/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/conf_att_request.xhtml</welcome-file>
+        <welcome-file>faces/create.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
