--- a/branches/piet/foreignExchange/foreignExchange-war/web/WEB-INF/web.xml
+++ b/branches/piet/foreignExchange/foreignExchange-war/web/WEB-INF/web.xml
@@ -19,6 +19,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/foreignExhangeViewEdit.xhtml</welcome-file>
+        <welcome-file>faces/foreignExhange.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
