--- a/branches/bobski/mtams/mtams/mtams-ejb/nbproject/private/private.properties
+++ b/branches/bobski/mtams/mtams/mtams-ejb/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Badger\\AppData\\Roaming\\NetBeans\\7.3\\gfv3-1530873990.properties
+deploy.ant.properties.file=C:\\Users\\Badger\\AppData\\Roaming\\NetBeans\\7.3\\config\\GlassFishEE6\\Properties\\gfv3-1530873990.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Badger/AppData/Roaming/NetBeans/7.3/config/GF3/domain1
 j2ee.server.home=C:/Program Files/glassfish-3.1.2.2/glassfish
