--- a/branches/bobski/mtams/mtams/nbproject/private/private.properties
+++ b/branches/bobski/mtams/mtams/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\Badger\\AppData\\Roaming\\NetBeans\\7.3\\gfv3-1530873990.properties
+deploy.ant.properties.file=C:\\Users\\Badger\\AppData\\Roaming\\NetBeans\\7.3\\config\\GlassFishEE6\\Properties\\gfv3-1530873990.properties
 j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\lib\\endorsed";"C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\modules\\endorsed" -javaagent:"C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\Users\\Badger\\AppData\\Roaming\\NetBeans\\7.3\\config\\GF3\\domain1\\config\\sun-acc.xml",client=jar=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
