- Custom 404 & 500 Error Pages - Fluid Layout 1.0 - Textfields alignment fixed - Buttons margin fixed - Static Menu [custom jQuery code] - More space between menu items - New colours

--- a/branches/marco/Template/web/WEB-INF/web.xml
+++ b/branches/marco/Template/web/WEB-INF/web.xml
@@ -19,6 +19,14 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/template.xhtml</welcome-file>
+        <welcome-file>faces/templateClient.xhtml</welcome-file>
     </welcome-file-list>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/errorPages/500.xhtml</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/errorPages/404.xhtml</location>
+    </error-page>
 </web-app>
