--- a/branches/Aaron/DataLookup/DataLookup-ejb/nbproject/project.properties
+++ b/branches/Aaron/DataLookup/DataLookup-ejb/nbproject/project.properties
@@ -35,14 +35,15 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=DataLookup-ejb.jar
+jars.in.ejbjar=false
 javac.classpath=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
     ${libs.EclipseLink-GlassFish-v3.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -61,7 +62,7 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
-platform.active=default_platform
+platform.active=JDK_1.6
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
