--- a/branches/Aaron/DataLookup/DataLookup-war/nbproject/project.properties
+++ b/branches/Aaron/DataLookup/DataLookup-war/nbproject/project.properties
@@ -49,8 +49,8 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,7 +70,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=default_platform
+platform.active=JDK_1.6
 project.DataLookup-ejb=../DataLookup-ejb
 reference.DataLookup-ejb.dist=${project.DataLookup-ejb}/dist/DataLookup-ejb.jar
 resource.dir=setup
