modifications made in order to select quotes in applicationApproval.xhtml

--- a/branches/megamerge/mtams/mtams-war/nbproject/private/private.properties
+++ b/branches/megamerge/mtams/mtams-war/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=/home/aaron/.netbeans/7.3/config/GlassFishEE6/Properties/gfv3387770154.properties
+deploy.ant.properties.file=C:\\Users\\Badger\\AppData\\Roaming\\NetBeans\\7.3\\config\\GlassFishEE6\\Properties\\gfv3-1530873990.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/aaron/bin/glassfish-3.1.2.2/glassfish/domains/domain2
-j2ee.server.home=/home/aaron/bin/glassfish-3.1.2.2/glassfish
-j2ee.server.instance=[/home/aaron/bin/glassfish-3.1.2.2/glassfish:/home/aaron/bin/glassfish-3.1.2.2/glassfish/domains/domain2]deployer:gfv3ee6wc:localhost:29016
-j2ee.server.middleware=/home/aaron/bin/glassfish-3.1.2.2
+j2ee.server.domain=C:/Users/Badger/AppData/Roaming/NetBeans/7.3/config/GF3/domain1
+j2ee.server.home=C:/Program Files/glassfish-3.1.2.2/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-3.1.2.2\\glassfish;C:\\Program Files\\glassfish-3.1.2.2\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-3.1.2.2
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/aaron/.netbeans/7.3/build.properties
+user.properties.file=C:\\Users\\Badger\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
